# rps-bot

./: .clang-tidy  .dockerignore  .eslintrc.json  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  arch.md  example-config.json  lang.json  notes.md  plan.puml
.cache/clangd/index/: main.cpp.F286F87010B11390.idx
.github/: CODEOWNERS
.github/workflows/: cmake-multi-platform.yml  codacy.yml  codeql.yml  docker-image.yml
cmake/: FindDPP.cmake  FindMySQL.cmake
commands/rps/: play.js
config/: ranks.json  settings.json
include/rps/: button_collector.h  button_int_collector.h  commandline.h  component_builder.h  config.h  embeds.h  game.h  game_manager.h  lang.h  listeners.h  logger.h  rps.h
include/rps/data_source/: database.h
include/rps/domain/: command.h  config.h  embeds.h  game.h  game_manager.h  lang.h  rps.h
include/rps/domain/commands/: leave.h  queue.h  register.h
include/sporks/: bot.h  includes.h  modules.h  statusfield.h  stringops.h
libs/: dpp.deb
modules/presence/: presence.cpp
modules/rps/: cmd_leave.cpp  cmd_queue.cpp  commands.cpp  commands.h  embed.cpp  embed.h  game_controller.cpp  game_controller.h  rps.cpp  rps.h  settings.cpp  settings.h  state.cpp  state.h  time.cpp  time.h
objects/: Game.js  Player.js
scripts/: build.sh  build_fresh.sh  build_fresh_no_docker.sh  build_no_docker.sh  clean.sh  run.sh  setup.sh
src/: CMakeLists.txt  init.cpp  main.cpp  player.cpp
src/data_source/: CMakeLists.txt  database.cpp
src/discord/: button_collector.cpp  commandline.cpp  component_builder.cpp  embeds.cpp  events.cpp  game.cpp  game_manager.cpp  listeners.cpp  main.cpp  modules.cpp  stringops.cpp
src/discord/commands/: leave.cpp  queue.cpp
src/domain/: command.cpp  commandline.cpp  component_builder.cpp  config.cpp  embeds.cpp  game.cpp  game_manager.cpp  lang.cpp  listeners.cpp  logger.cpp  server.cpp
src/domain/commands/: leave.cpp  queue.cpp  register.cpp
src/presentation/: main.cpp
test/: CMakeLists.txt  test_queue.cpp
